# utility

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md
include/ungive/utility/: atomic.h  atomic.hpp  example.h  live_value.h
include/ungive/utility/detail/: atomic_zero_counter.hpp  unlock_guard.h  unlock_guard.hpp
test/: atomic_test.cpp  example_test.cpp  live_value_test.cpp
test/detail/: atomic_zero_counter_test.cpp
